# zerotouch-platform

./: .aidigestignore  .env.example  .env.ssm.example  .gitignore  .sops.yaml  CONTRIBUTING.md  README.md  pyproject.toml  sa-signer-dev.key
.github/: ci-ignore-oos-apps.txt
.github/workflows/: build-docs-mcp.yaml  build-mcp-server-qdrant.yaml  build-platform-preview.yml  ci-build.yml  ci-test.yml  create-cluster.yaml  inject-secrets.yml  main-pipeline.yml  platform-integration-test.yaml  platform-sanity-test.yaml  publish-sdk-pypi.yml  release-pipeline.yml  setup-branch-protection.yaml  validate-ksops.yml
artifacts/templates/: spec-template.md
bootstrap/: 00-eso-bootstrap.yaml  10-platform-bootstrap.yaml  argocd-admin-patch.yaml  config.yaml  platform-bootstrap.yaml  root.yaml
bootstrap/components/: 01-crossplane.yaml  01-eso.yaml  01-foundation-config.yaml  01-kagent-crds.yaml  01-kagent.yaml  01-keda.yaml  01-local-path-provisioner.yaml  03-intelligence.yaml  04-apis.yaml  05-databases.yaml
bootstrap/secrets/: README.md  eso-bootstrap-secret.yaml.example
bootstrap/talos/: talosconfig
llm-context/: ADAPT-MERGE-ARGO-APPS-STRUCTURAL-CHANGES.md  README.md  VALIDATION-PATTERNS.md  age-key-backup-recovery.md  build-modes.md  components-architecture.mermaid  platform-secrets-workflow.md
llm-context/ADR/: ADR-framework.md  platform-identity-and-data-access.md
llm-context/ci-cd/: INTEGRATION-TESTING-PATTERNS.md  LOCAL-TESTING-PATTERN.md  in-cluster-test.md
llm-context/platform/: ADR-framework.md  architecture.md  ksop-key-management.md  platform-identity-and-data-access.md  resource-stratergy.md  secrets-management-ksops-production.md  secrets-management-preview.md  secrets-management-production.md  tenant-repository.md
llm-context/secrets/: QUICKSTART.md  platform-secrets-management.md
llm-context/secrets-management/: age-key-backup-recovery.md  platform-secrets-management.md  pr-secret-management.md  secrets-management-preview.md
llm-context/testing/: add-new-env-var.md  commands.md  in-cluster-testing.md  pre-deployment-validation.md  test-validation-workflow.md
llm-context/troubleshooting/: argocd-sync.md
platform/: 01-foundation.yaml  02-observability.yaml.disabled  03-intelligence.yaml  05-databases.yaml  versions.yaml
platform/01-foundation/: aws-secret-store.yaml
platform/03-intelligence/: namespace.yaml  qdrant.yaml
scripts/: publish-schema.sh  validate-claim.sh  validate-cluster.sh  wait-for-pods.sh  wait-for-sync.sh
secrets/: database-url.pr.secret.yaml  hetzner-s3-access-key.pr.secret.yaml  hetzner-s3-secret-key.pr.secret.yaml
services/docs-mcp/: pyproject.toml
(+580 files in other folders)
