[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerotouch-platform-validation"
version = "0.1.0"
description = "ZeroTouch Platform validation scripts and tests"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project.optional-dependencies]
dev = [
    "pytest-xdist>=3.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["scripts/bootstrap/validation"]
python_files = ["validate-*.py", "test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
    "cluster: marks tests that require cluster access",
]